# aoc2025

./: aoc2025.cabal  cabal.project
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
