cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0

data-dir: data

extra-source-files: CHANGELOG.md

executable aoc2023
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010

  ghc-options:
    -Wall

  default-extensions:
    OverloadedStrings

  other-modules:
    Paths_aoc2025
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12

  autogen-modules:
    Paths_aoc2025

  build-depends:
      base >=4.17.2.0
